feat: show card word

--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -24,16 +24,16 @@
     <div id="card-word"> 
       <div class="card-word">
         <div>
-          <img src='assets/files/01_0001.jpg' class="img-word">
+          <img src='assets/files/05_0081.jpg' class="img-word">
         </div>
         <div>
-          <h3>word</h3>
-          <div>[transcription]</div>
-          <div>wordTranslate</div>
-          <audio src='assets/files/01_0001.mp3' controls></audio>
-          <div>textExample</div>
-          <div>textExampleTranslate</div>
-          <audio src='assets/files/01_0001_example.mp3' controls></audio>
+          <h2>active</h2>
+          <div>[ǽktiv]</div>
+          <div>активный</div>
+          <audio src='assets/files/05_0081.mp3' controls></audio>
+          <div>It is important to be <b>active</b> and not sit around all the time.</div>
+          <div>Важно быть активным, а не сидеть без дела все время</div>
+          <audio src='assets/files/05_0081_example.mp3' controls></audio>
         </div>
       </div>
     </div>
