--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -21,23 +21,28 @@
       <input class="element-style" id="word-seach" type="search" name="text" required placeholder="Enter word"
         autocomplete="off" autofocus>
     </div>
-    <div id="card-word"> 
+    <div id="card-word">
       <div class="card-word">
         <div>
           <img src='assets/files/05_0081.jpg' class="img-word">
         </div>
         <div>
-          <h2>active</h2>
-          <div>[ǽktiv]</div>
-          <div>активный</div>
-          <audio src='assets/files/05_0081.mp3' controls></audio>
-          <div>It is important to be <b>active</b> and not sit around all the time.</div>
-          <div>Важно быть активным, а не сидеть без дела все время</div>
-          <audio src='assets/files/05_0081_example.mp3' controls></audio>
+          <div class="word-translate">
+            <h2>active</h2>
+            <div>[ǽktiv]</div>
+            <div>активный</div>
+            <audio src='assets/files/05_0081.mp3' controls></audio>
+          </div>
+          <div class="word-example">
+            <div>It is important to be <b>active</b> and not sit around all the time.</div>
+            <div>Важно быть активным, а не сидеть без дела все время</div>
+            <audio src='assets/files/05_0081_example.mp3' controls></audio>
+          </div>
+
         </div>
       </div>
     </div>
-    
+
     <div class="words" id="words"></div>
   </main>
   <footer class="footer">
