--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -35,10 +35,14 @@
           </div>
           <div class="word-example">
             <div>It is important to be <b>active</b> and not sit around all the time.</div>
-            <div>Важно быть активным, а не сидеть без дела все время</div>
+            <div>Важно быть активным, а не сидеть без дела все время.</div>
             <audio src='assets/files/05_0081_example.mp3' controls></audio>
           </div>
-
+          <div class="word-example">
+          <div>When someone is <b>active</b>, they move a lot or have a lot of things to do.</div>
+          <div>Когда кто-то активен, он много двигается или у него много дел</div>
+          <audio src='assets/files/05_0081_meaning.mp3' controls></audio>
+        </div>
         </div>
       </div>
     </div>
