--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -94,6 +94,46 @@
     </div>
 
     <div class="hide" id="edit-page">
+      <div class="edit-page">
+        <div id="to-add-word" class="button">
+          <p> Добавить слово в словарь</p>
+        </div>
+        <div id="to-delete-word" class="button">
+          <p> Удалить слово из словаря</p>
+        </div>
+        <div id="to-delete-word" class="button">
+          <p> Редактировать слово в словаре</p>
+        </div>
+      </div>
+
+      <div class="hide" id="add-word">
+        <form class="form" id="form">
+          <div class="form-element">
+            <label for="group">Введите уровень сложности слова (0-5) <span class="required">*</span></label>
+            <input type="number" id="group" min="0" max="5" value="0" required>
+          </div>
+          <div class="form-element">
+            <label for="page">Введите номер страницы для слова (0-30)<span class="required">*</span></label>
+            <input type="number" id="page" min="0" max="30" value="0" required>
+          </div>
+          <div class="form-element">
+            <label for="word">Введите слово на английском языке<span class="required">*</span></label>
+            <input type="text" id="word" max="100" required>
+          </div>
+          <div class="form-element">
+            <label for="transcription">Введите транскрипцию</label>
+            <input type="text" id="transcription" max="100">
+          </div>
+          <div class="form-element">
+            <label for="wordTranslate">Введите перевод на русский язык</label>
+            <input type="text" id="wordTranslate">
+          </div>
+          <div class="remark"> 
+            <span class="required">*</span> помечены поля обязательные для заполнения
+          </div>
+  
+        </form>
+      </div>
       
     </div>
 
