--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -94,20 +94,23 @@
     </div>
 
     <div class="hide" id="edit-page">
-      <div class="edit-page">
-        <div id="to-add-word" class="button">
-          <p> Добавить слово в словарь</p>
+      <div id="edit-page-buttons">
+        <div class="edit-page-buttons">
+          <div id="to-add-word" class="button">
+            <p> Добавить слово в словарь</p>
+          </div>
+          <div id="to-delete-word" class="button">
+            <p> Удалить слово из словаря</p>
+          </div>
+          <div id="to-delete-word" class="button">
+            <p> Редактировать слово в словаре</p>
+          </div>
         </div>
-        <div id="to-delete-word" class="button">
-          <p> Удалить слово из словаря</p>
-        </div>
-        <div id="to-delete-word" class="button">
-          <p> Редактировать слово в словаре</p>
-        </div>
+
       </div>
 
       <div class="hide" id="add-word">
-        <form class="form" id="form">
+        <form class="form" id="form-add-word">
           <div class="form-element">
             <label for="group">Введите уровень сложности слова (0-5) <span class="required">*</span></label>
             <input type="number" id="group" min="0" max="5" value="0" required>
@@ -118,23 +121,27 @@
           </div>
           <div class="form-element">
             <label for="word">Введите слово на английском языке<span class="required">*</span></label>
-            <input type="text" id="word" max="100" required>
+            <input type="text" id="word" max="100" pattern="[A-zА-я\s]+"
+            required autocomplete="off">
           </div>
           <div class="form-element">
             <label for="transcription">Введите транскрипцию</label>
-            <input type="text" id="transcription" max="100">
+            <input type="text" id="transcription" max="100" autocomplete="off">
           </div>
           <div class="form-element">
             <label for="wordTranslate">Введите перевод на русский язык</label>
-            <input type="text" id="wordTranslate">
+            <input type="text" id="wordTranslate" autocomplete="off">
           </div>
-          <div class="remark"> 
+          <div class="remark">
             <span class="required">*</span> помечены поля обязательные для заполнения
           </div>
-  
+          <button type="submit" id="submit-btn-add-word">
+            <p>Добавить слово в словарь</p>
+          </button>
+
         </form>
       </div>
-      
+
     </div>
 
   </main>
