fix delete word

--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -16,6 +16,9 @@
     <div class="title">
       Англо-русский словарь
     </div>
+    <div id="exit" class="button hide">
+      <p>Выход из режима редактирования</p>
+    </div>
     <div id="dictionary-show" class="button">
       <p> Начать изучение слов</p>
     </div>
