--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -17,7 +17,7 @@
       Англо-русский словарь
     </div>
     <div id="dictionary-show" class="button">
-      <p> Начать изучение слов</p>
+      <p> Поиск и изучение слов</p>
     </div>
     <div id="to-edit-page" class="button">
       <p> Редактирование словаря </p>
@@ -103,17 +103,6 @@
       <a href="#" class="close-modal" id="close-modal"></a>
     </div>
 
-    <div class="modal hide" id="confirm">
-      <div class="confirm-btn">
-        <div id="confirm-yes" class="button">
-          <p>Да</p>
-        </div>
-        <div id="confirm-no" class="button">
-          <p> Нет</p>
-        </div>
-      </div>
-    </div>
-
     <div class="hide" id="edit-page">
       <div id="edit-page-buttons">
         <div class="edit-page-buttons">
@@ -127,7 +116,6 @@
             <p> Редактировать слово в словаре</p>
           </div>
         </div>
-
       </div>
 
       <div class="hide" id="add-word">
@@ -135,48 +123,119 @@
         <form class="form" id="form-add-word">
           <fieldset>
             <legend>Заполните поля формы</legend>
+
             <div class="form-element">
               <label for="group">Введите уровень сложности слова (0-5) <span class="required">*</span></label>
               <input type="number" id="group" min="0" max="5" value="0" required>
             </div>
+            <hr>
+
             <div class="form-element">
               <label for="page">Введите номер страницы для слова (0-30)<span class="required">*</span></label>
               <input type="number" id="page" min="0" max="30" value="0" required>
             </div>
+            <hr>
+
             <div class="form-element">
               <label for="word">Введите слово на английском языке<span class="required">*</span>
                 <div class="remark">(используйте только латинские символы)</div>
               </label>
               <input type="text" id="word" max="100" pattern="[A-z\s]+" required autocomplete="off">
             </div>
+            <hr>
+
             <div class="form-element">
               <label for="transcription">Введите транскрипцию</label>
               <input type="text" id="transcription" max="100" autocomplete="off">
             </div>
+            <hr>
+
             <div class="form-element">
               <label for="wordTranslate">Введите перевод на русский язык
                 <div class="remark">(используйте только русские символы)</div>
               </label>
               <input type="text" id="wordTranslate" pattern="[А-я\s]+" autocomplete="off">
             </div>
-            <div>
-              <label for="imageUpload">Выберите файл изображения</label>
-              <input type="file" id="imageUpload" accept="image/*">
-              <img id="img-preview" src="" width="30">
+            <hr>
+
+            <div class="form-element">
+              <label class="input-label" for="imageUpload">Выберите файл изображения</label>
+              <input type="file" id="imageUpload" accept="image/*" style="display:none">
+              <img id="img-preview" src="">
+              <div class="input-filename" id="img-file-name">Файл не выбран</div>
             </div>
+            <hr>
+
+            <div class="form-element">
+              <label class="input-label" for="audioUpload">Выберите аудио файл для прослушивания слова (mp3)</label>
+              <input type="file" id="audioUpload" accept=".mp3" style="display:none">
+              <audio id="audio-preview" src="" controls> </audio>
+              <div class="input-filename" id="audio-file-name">Файл не выбран</div>
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label for="textExample">Введите пример использования слова на английском языке
+                <div class="remark">(используйте только латинские символы)</div>
+              </label>
+              <input type="text" id="textExample" pattern="[A-z\s]+" autocomplete="off">
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label class="input-label" for="audioExampleUpload">Выберите аудио файл для прослушивания примера
+                (mp3)</label>
+              <input type="file" id="audioExampleUpload" accept=".mp3" style="display:none">
+              <audio id="audioExample-preview" src="" controls> </audio>
+              <div class="input-filename" id="audioExample-file-name">Файл не выбран</div>
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label for="textExampleTranslate">Введите перевод примера использования слова
+                <div class="remark">(используйте только русские символы)</div>
+              </label>
+              <input type="text" id="textExampleTranslate" pattern="[А-я\s]+" autocomplete="off">
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label for="textMeaning">Введите объяснение значения слова на английском языке
+                <div class="remark">(используйте только латинские символы)</div>
+              </label>
+              <input type="text" id="textMeaning" pattern="[A-z\s]+" autocomplete="off">
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label class="input-label" for="audioMeaningUpload">Выберите аудио файл для прослушивания объяснения значения слова
+                (mp3)</label>
+              <input type="file" id="audioMeaningUpload" accept=".mp3" style="display:none">
+              <audio id="audioMeaning-preview" src="" controls> </audio>
+              <div class="input-filename" id="audioMeaning-file-name">Файл не выбран</div>
+            </div>
+            <hr>
+
+            <div class="form-element">
+              <label for="textMeaningTranslate">Введите перевод объяснения значения слова
+                <div class="remark">(используйте только русские символы)</div>
+              </label>
+              <input type="text" id="textMeaningTranslate" pattern="[А-я\s]+" autocomplete="off">
+            </div>
+            <hr>
+
             <br>
             <div class="remark">
               <span class="required">*</span> помечены поля обязательные для заполнения
             </div>
-            <hr>
+
             <br>
             <button type="submit" id="submit-btn-add-word">
               <p>Добавить слово в словарь</p>
             </button>
+         
           </fieldset>
         </form>
-
-
 
         <br>
         <div id="from-add-page" class="button small-btn">
