--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -123,19 +123,16 @@
         <form class="form" id="form-add-word">
           <fieldset>
             <legend>Заполните поля формы</legend>
-
             <div class="form-element">
               <label for="group">Введите уровень сложности слова (0-5) <span class="required">*</span></label>
               <input type="number" id="group" min="0" max="5" value="0" required>
             </div>
             <hr>
-
             <div class="form-element">
               <label for="page">Введите номер страницы для слова (0-30)<span class="required">*</span></label>
               <input type="number" id="page" min="0" max="30" value="0" required>
             </div>
             <hr>
-
             <div class="form-element">
               <label for="word">Введите слово на английском языке<span class="required">*</span>
                 <div class="remark">(используйте только латинские символы)</div>
@@ -143,13 +140,11 @@
               <input type="text" id="word" max="100" pattern="[A-z\s]+" required autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label for="transcription">Введите транскрипцию</label>
               <input type="text" id="transcription" max="100" autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label for="wordTranslate">Введите перевод на русский язык
                 <div class="remark">(используйте только русские символы)</div>
@@ -157,7 +152,6 @@
               <input type="text" id="wordTranslate" pattern="[А-я\s]+" autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label class="input-label" for="imageUpload">Выберите файл изображения</label>
               <input type="file" id="imageUpload" accept="image/*" style="display:none">
@@ -165,7 +159,6 @@
               <div class="input-filename" id="img-file-name">Файл не выбран</div>
             </div>
             <hr>
-
             <div class="form-element">
               <label class="input-label" for="audioUpload">Выберите аудио файл для прослушивания слова (mp3)</label>
               <input type="file" id="audioUpload" accept=".mp3" style="display:none">
@@ -173,7 +166,6 @@
               <div class="input-filename" id="audio-file-name">Файл не выбран</div>
             </div>
             <hr>
-
             <div class="form-element">
               <label for="textExample">Введите пример использования слова на английском языке
                 <div class="remark">(используйте только латинские символы)</div>
@@ -181,7 +173,6 @@
               <input type="text" id="textExample" pattern="[A-z\s]+" autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label class="input-label" for="audioExampleUpload">Выберите аудио файл для прослушивания примера
                 (mp3)</label>
@@ -190,7 +181,6 @@
               <div class="input-filename" id="audioExample-file-name">Файл не выбран</div>
             </div>
             <hr>
-
             <div class="form-element">
               <label for="textExampleTranslate">Введите перевод примера использования слова
                 <div class="remark">(используйте только русские символы)</div>
@@ -198,7 +188,6 @@
               <input type="text" id="textExampleTranslate" pattern="[А-я\s]+" autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label for="textMeaning">Введите объяснение значения слова на английском языке
                 <div class="remark">(используйте только латинские символы)</div>
@@ -206,7 +195,6 @@
               <input type="text" id="textMeaning" pattern="[A-z\s]+" autocomplete="off">
             </div>
             <hr>
-
             <div class="form-element">
               <label class="input-label" for="audioMeaningUpload">Выберите аудио файл для прослушивания объяснения значения слова
                 (mp3)</label>
@@ -215,7 +203,6 @@
               <div class="input-filename" id="audioMeaning-file-name">Файл не выбран</div>
             </div>
             <hr>
-
             <div class="form-element">
               <label for="textMeaningTranslate">Введите перевод объяснения значения слова
                 <div class="remark">(используйте только русские символы)</div>
@@ -223,20 +210,16 @@
               <input type="text" id="textMeaningTranslate" pattern="[А-я\s]+" autocomplete="off">
             </div>
             <hr>
-
             <br>
             <div class="remark">
               <span class="required">*</span> помечены поля обязательные для заполнения
             </div>
-
             <br>
             <button type="submit" id="submit-btn-add-word">
               <p>Добавить слово в словарь</p>
             </button>
-         
           </fieldset>
         </form>
-
         <br>
         <div id="from-add-page" class="button small-btn">
           <p> Выход из режима добавления </p>
@@ -263,6 +246,31 @@
         <br>
         <div id="from-delete-page" class="button small-btn">
           <p> Выход из режима удаления </p>
+        </div>
+      </div>
+
+      <div class="hide" id="update-word">
+        <h3>Обновление слова в словаре</h3>
+        
+        <form class="form" id="form-find-word">
+          <fieldset>
+            <legend>Заполните поля формы</legend>
+            <div class="form-element">
+              <label for="find-word">Введите слово на английском языке
+                <div class="remark">(используйте только латинские символы)</div>
+              </label>
+              <input type="text" id="find-word" max="100" pattern="[A-z\s]+" required autocomplete="off">
+            </div>
+            <br>
+            <button type="submit" id="submit-btn-find-word">
+              <p>Вывести данные слова из словаря</p>
+            </button>
+          </fieldset>
+        </form>
+
+        <br>
+        <div id="from-update-page" class="button small-btn">
+          <p> Выход из режима обновления </p>
         </div>
       </div>
 
