--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -170,7 +170,7 @@
               <label for="textExample">Введите пример использования слова на английском языке
                 <div class="remark">(используйте латинские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textExample" pattern="[A-z\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textExample" pattern="[^А-я]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
@@ -185,14 +185,14 @@
               <label for="textExampleTranslate">Введите перевод примера использования слова
                 <div class="remark">(используйте русские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textExampleTranslate" pattern="[А-я\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textExampleTranslate" pattern="[^A-z]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
               <label for="textMeaning">Введите объяснение значения слова на английском языке
                 <div class="remark">(используйте латинские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textMeaning" pattern="[A-z\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textMeaning" pattern="[^А-я]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
@@ -207,7 +207,7 @@
               <label for="textMeaningTranslate">Введите перевод объяснения значения слова
                 <div class="remark">(используйте русские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textMeaningTranslate" pattern="[А-я\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textMeaningTranslate" pattern="[^A-z]+" autocomplete="off">
             </div>
             <hr>
             <br>
@@ -311,7 +311,7 @@
               <label for="textExample-update">Введите пример использования слова на английском языке
                 <div class="remark">(используйте латинские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textExample-update" pattern="[A-z\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textExample-update" pattern="[^А-я]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
@@ -326,14 +326,14 @@
               <label for="textExampleTranslate-update">Введите перевод примера использования слова
                 <div class="remark">(используйте русские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textExampleTranslate-update" pattern="[А-я\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textExampleTranslate-update" pattern="[^A-z]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
               <label for="textMeaning-update">Введите объяснение значения слова на английском языке
                 <div class="remark">(используйте латинские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textMeaning-update" pattern="[A-z\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textMeaning-update" pattern="[^А-я]+" autocomplete="off">
             </div>
             <hr>
             <div class="form-element">
@@ -348,7 +348,7 @@
               <label for="textMeaningTranslate-update">Введите перевод объяснения значения слова
                 <div class="remark">(используйте русские символы)</div>
               </label>
-              <input class="input-long" type="text" id="textMeaningTranslate-update" pattern="[А-я\s\D]+" autocomplete="off">
+              <input class="input-long" type="text" id="textMeaningTranslate-update" pattern="[^A-z]+" autocomplete="off">
             </div>
             <hr>
             <br>
